# humancompatible-train

./: .gitignore  .readthedocs.yaml  README.md  algorithm_demo.ipynb  cluster_env_setup.txt  constraint_demo.ipynb  pyproject.toml  requirements.txt  requirements_benchmark.txt  requirements_benchmark_mkl.txt  run.batch  setup.txt  tiny_image_net.py  train_4_optimizers.py
.github/workflows/: setup.yml
PDEs/Helmholtz/: Helmholtz.py
PDEs/Klein-Gordon/: Klein_Gordon.py
benchmark/: _data_sources.py  aggregate_results.py  benchmark_utils.py  constraint_meta.py  constraints.py  demo_balls.py  eval_model_fairness.py  hparam_search.py  launch_sweeper.py  optim_loop_wrapper.py  pareto_benchmark.py  pareto_fairness.py  pbm_dimin_config.yaml  plotting.py  run_benchmark.py  run_burgers.py  run_gridsearch.py  run_helmholtz.py  run_klein_gordon.py  run_single_experiment.py  spbm_convergence_counterexample.py  utils.py
docs/: requirements.txt
docs/source/: api.rst  (+6 more)
env_compatible/: pyvenv.cfg
env_fairbench/: pyvenv.cfg
env_human/: pyvenv.cfg
examples/: MSD_integration.ipynb  acsincome_equalop_bench.py  acsincome_vector_bench.py  bench_effect_dual_beta.py  bench_utils.py  benchmarking.ipynb  benchmarking.py  benchmarking_copy.ipynb  benchmarking_wrapper_example.ipynb  chop_example.py  cifar100_bench.py  cifar10_bench.py  cifar10_gridsearch.py  constrained_learning.ipynb  constrained_training.ipynb  constraint_demo.ipynb  demo_utils.py  dutch_bench.py  fair_loss_constraint.ipynb  learn_DAG.ipynb  learn_PDE.ipynb  learn_pde.ipynb  pde.ipynb  test_PBM.py  test_experimental_algs.py  test_ssw_barrier.py  torch_api_demo.ipynb  weights_reg_benchmark.py
experiments/: algo_plots.ipynb  calculate_iteration_values.py  cifar_experiment.ipynb  cifar_net.pth  model_plots.ipynb  plot_pbm_demo_balls.py  run_dutch.py  run_experiment.py  run_folktables.py  run_folktables_torchalgs.py
sensitivity_analysis/: analyze_sensitivity.py
tests/: test_alm.py  test_balanced_batch_sampler.py  test_ialm.py  test_nonopt.py  test_nupi.py  test_pbm.py  test_ssl_alm.py  test_ssl_alm_adam.py  test_ssw.py
(+2777 files in other folders)
