[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "humancompatible-train"
version = "0.1.8.4"
dependencies = [
    "torch",
    "numpy",
]
requires-python = ">= 3.11, <3.14"
authors = [
    {name = "Andrii Kliachkin", email = "kliachkin.andrii@gmail.com"},
    {name = "Gilles Bareilles"},
    {name = "Jana Lepsova"},
    {name = "Jakub Marecek"},
]
maintainers = [
    {name = "Andrii Kliachkin", email = "kliachkin.andrii@gmail.com"}
]
description = "PyTorch-based package for constrained training of neural networks"
readme = "README.md"

# [tool.setuptools]
# package-dir = {"" = "src"}

# [tool.setuptools]
# packages = ["humancompatible.train"]

# [tool.setuptools.packages.find]
# namespaces = false
# packages = ["humancompatible.train.optim", "humancompatible.train.fairness.utils", "humancompatible.train.benchmark"]

[project.optional-dependencies]
examples = ["ipykernel", "ipympl", "fairret", "folktables", "scikit-learn", "matplotlib"]
benchmark = ["fairret", "matplotlib", "pandas", "folktables", "pot", "hydra", "omegaconf"]
ghost = ["qpsolvers", "scipy"]