[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "humancompatible-train"
version = "0.3.0"
dependencies = [
    "torch",
    "numpy",
]
requires-python = ">= 3.11, <3.14"
authors = [
    {name = "Andrii Kliachkin", email = "kliacand@fel.cvut.cz"},
    {name = "Gilles Bareilles"},
    {name = "Adam Bosak"},
    {name = "Jana Lepsova"},
    {name = "Jakub Marecek"},
]
maintainers = [
    {name = "Andrii Kliachkin", email = "kliacand@fel.cvut.cz"}
]
description = "PyTorch-based package for constrained training of neural networks"
readme = "README.md"

[project.optional-dependencies]
examples = ["ipykernel", "ipympl", "fairret", "folktables", "scikit-learn", "matplotlib"]
benchmark = ["fairret", "matplotlib", "pandas", "folktables", "pot", "hydra", "omegaconf"]
ghost = ["qpsolvers", "scipy"]